  _monsters config option, just like attackSkillSlot.
  This example uses Pneuma only when Raydric Archer attacks:
  useSelf_skill_6 Pneuma
  ...
  useSelf_skill_6_monsters Raydric Archer
  ...
- Priority attacks for non-aggressive monsters are now supported.
- Weighted maprouting to avoid/prefer walking through certain maps
  (see control/routeweights.txt for configuration).

New config options:
- useSelfSkill_#_monsters
  partySkill_#_monsters
  partySkill_#_target_monsters
  useSelf_item_#_monsters
  Only activate useSelfSkill/partySkill/useSelf_item if a certain 
  monster attacks.
- partySkill_#_target_aggressives
  Only activate partySkill if a certain monster attacks a party member.

Bug fixes:
- Kore can walk on walkable water now (bug #21).
- getAuto never gets triggered if you're low on a certain item. This has
  been fixed.

Internal:
- findIndex() and related functions are now much faster (bug #16).
- writeDataFile*() won't write trailing spaces.
- Functions in Tools.dll are now called through XS, Perl's native
  C-to-Perl interface.
- Kore now detects what directory its executable is in, and adds it to
  its include path (@INC).
- Fixed a crash when cart inventory is not available (such as during login).

Credits:
- Joseph: -1 flag support in mon_control.txt
- aputs: Support for the _monsters option in useSelf_skill, useSelf_item
  and partySkill.
- obyarou: Priority attack support for non-aggressive monsters.
- fov: writeDataFile*() tweaks
- polokus: idRO Amatsu/Kunlun support
- Ven`Tatsu: walkable water bugfix (bug #21)


==================
### 1.4.1
==================

New features:
- idRO's new secure login keys are now supported. Set secureLogin_type to 4
  or 5, depending on your server.

New config options:
- secureLogin_requestCode
  If idRO's secure login key changes again, you don't have to modify the
  source code to be able to login. Put the secure login key in this option.
  Example:
  04 02 22 37 D7 FC 8E 9B 05 79 60 AE 02 33 6D 0D 82 C6